Fixed compilation error on java 18 by replacing getFirst() and getLast()